<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgWisata"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_image"
            android:contentDescription="@string/image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/nama"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/imgWisata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/tvLokasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/lokasi"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tvNama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
